# astroai-lab

./: .gitignore  README.md  pyproject.toml
.cursor/harness/trajectories/: 2026-07-13-marimo-student.md
.github/workflows/: ci.yml  publish.yml
docs/: ORG_MIGRATION.md  ROADMAP.md  USAGE.md  cli.md  config.md  guide.md
scripts/: audit-cli-help.sh  ci.sh
src/astroai_lab/: __init__.py  __main__.py  errors.py  ui.py
src/astroai_lab/agent/: __init__.py  addons.py  bundle_path.py  bundles.py  free_models.py  install.py  setup_state.py
src/astroai_lab/cli/: agent_cmd.py  backup.py  banner.py  clean.py  config.py  data.py  doctor.py  env.py  guide.py  init_clone_env.py  kernel.py  main.py  notebook_cmd.py  paths_cmd.py  project.py  ray_cmd.py  status.py  workspace.py
src/astroai_lab/config/: __init__.py  settings.py
src/astroai_lab/core/: arc_permissions.py  backup.py  disk_usage.py  git.py  home_hygiene.py  hygiene.py  kernel.py  paths.py  project.py  session_resources.py  storage.py  team.py  tools.py  vospace_status.py  workspace.py
src/astroai_lab/data/agent/: addons.json  manifest.json  skills-sources.json
src/astroai_lab/data/agent/claude/: settings.json
src/astroai_lab/data/agent/cli/: agent-tools.sh
src/astroai_lab/data/agent/codex/: config.toml
src/astroai_lab/data/agent/copilot/: mcp-config.json
src/astroai_lab/data/agent/cursor/: mcp.json
src/astroai_lab/data/agent/free-models/: cline-free.md  kilo.jsonc
src/astroai_lab/data/agent/goose/: extensions.yaml  goosehints
src/astroai_lab/data/agent/marimo/: marimo.toml
src/astroai_lab/data/agent/mcp/: core.json
src/astroai_lab/data/agent/opencode/: opencode.json
src/astroai_lab/data/agent/project/: AGENTS.md
src/astroai_lab/data/notebooks/: ray_train.ipynb  starter.ipynb  starter.py
src/astroai_lab/data/shell/: hooks.sh  profile.sh
src/astroai_lab/models/: __init__.py
src/astroai_lab/shell/: __init__.py  session_env.py
src/astroai_lab/utils/: json_utils.py  subprocess.py
src/canfar_lab/: __init__.py  config.py  paths.py  project.py  ui.py
src/canfar_lab/agent/: __init__.py  bundle_path.py  bundles.py  free_models.py  install.py  setup.py
src/canfar_lab/cli/: agent_cmd.py  banner.py  clean.py  config.py  context.py  data.py  doctor.py  env.py  guide.py  init_clone_env.py  kernel.py  main.py  paths_cmd.py  project.py  status.py  workspace.py
src/canfar_lab/config/: __init__.py  settings.py
src/canfar_lab/core/: arc_permissions.py  cadc_auth.py  git.py  hygiene.py  kernel.py  paths.py  project.py  session_common.py  storage.py  team.py  tools.py  vospace_status.py  workspace.py
src/canfar_lab/data/agent/: manifest.json  skills-sources.json
src/canfar_lab/data/agent/claude/: mcp.json  settings.json
src/canfar_lab/data/agent/cli/: agent-tools.sh
src/canfar_lab/data/agent/codex/: config.toml
src/canfar_lab/data/agent/copilot/: mcp-config.json
src/canfar_lab/data/agent/cursor/: mcp.json
src/canfar_lab/data/agent/free-models/: cline-free.md  kilo.jsonc
src/canfar_lab/data/agent/goose/: extensions.yaml  goosehints
src/canfar_lab/data/agent/mcp/: core.json
src/canfar_lab/data/shell/: hooks.sh  profile.sh
src/canfar_lab/models/: __init__.py  manifest.py
src/canfar_lab/shell/: __init__.py  session_env.py
src/canfar_lab/utils/: console.py  subprocess.py
tests/: conftest.py  helpers.py  test_paths.py  test_project.py
tests/cli/: test_cli_extended.py  test_commands.py  test_env_shell.py  test_notebook_starter.py  test_session_flow.py
tests/integration/: test_cold_start_save_resume.py
tests/unit/: test_addons.py  test_agent.py  test_agent_coverage_boost.py  test_agent_extended.py  test_agent_setup_state.py  test_arc_permissions.py  test_backup.py  test_cadc_auth.py  test_disk_usage.py  test_free_models.py  test_home_hygiene.py  test_hygiene_extended.py  test_kernel.py  test_paths.py  test_paths_extended.py  test_project.py  test_project_extended.py  test_pure_logic.py  test_session_env.py  test_settings.py  test_storage.py  test_storage_extended.py  test_subprocess.py  test_team.py  test_tools.py  test_ui.py  test_vospace_status.py  test_workspace.py
(+14 files in other folders)
