[project]
name = "canfar-lab"
version = "0.1.0"
description = "In-session workbench CLI for the CANFAR Science Platform"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Simon Fabbro", email = "simon.fabbro@nrc-cnrc.gc.ca" }]
keywords = ["canfar", "science-platform", "astronomy", "session"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "humanize>=4.12.3",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://opencadc.github.io/canfar/"
Repository = "https://github.com/sfabbro/canfar-lab"
Issues = "https://github.com/sfabbro/canfar-lab/issues"

[project.scripts]
canfar-lab = "canfar_lab.cli.main:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/canfar_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=canfar_lab --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["src/canfar_lab"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
